# hermes-local-sqlite-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
hermes_local_sqlite_memory/: __init__.py  cli.py
mann_memory/: __init__.py  cli.py
plugin/: plugin.yaml
tests/: test_local_sqlite_memory_provider.py  test_mann_memory_provider.py
