[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mann-memory"
version = "0.1.7"
description = "Mann_Memory SQLite/FTS5 memory provider for Hermes Agent with review workflow, Memory Guard quarantine, namespaces, graph context, memory inspection/control, portability backup/export/import, and deterministic consolidation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hermes Mann_Memory contributors"}]
keywords = ["hermes-agent", "memory", "sqlite", "fts5", "local-first"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
include = ["mann_memory*"]
